--- a/UPSParks/Views/Shared/_Layout.cshtml
+++ b/UPSParks/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
                 <a class="nav-link active" data-toggle="tab" href="#home">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#profile">Floor #1</a>
+                <a class="nav-link" data-toggle="tab" href="#Floor1">Floor #1</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#profile">Floor #2</a>
@@ -32,16 +32,22 @@
         </ul>
         <div id="myTabContent" class="tab-content">
             <div class="tab-pane fade show active" id="home">
-                <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                <p>Test Home Page</p>
             </div>
-            <div class="tab-pane fade" id="profile">
-                <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
+            <div class="tab-pane fade show active" id="Floor1">
+                <p>Test Floor1</p>
             </div>
-            <div class="tab-pane fade" id="dropdown1">
-                <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork.</p>
+            <div class="tab-pane fade show active" id="Floor2">
+                <p>Test Floor2</p>
             </div>
-            <div class="tab-pane fade" id="dropdown2">
-                <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater.</p>
+            <div class="tab-pane fade show active" id="Floor3">
+                <p>Test Floor3</p>
+            </div>
+            <div class="tab-pane fade show active" id="Floor4">
+                <p>Test Floor4</p>
+            </div>
+            <div class="tab-pane fade show active" id="Floor5">
+                <p>Test FLoor5</p>
             </div>
         </div>
         @RenderBody()
