--- a/UPSParks/Views/Shared/_Layout.cshtml
+++ b/UPSParks/Views/Shared/_Layout.cshtml
@@ -18,16 +18,16 @@
                 <a class="nav-link" data-toggle="tab" href="#Floor1">Floor #1</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#profile">Floor #2</a>
+                <a class="nav-link" data-toggle="tab" href="#Floor2">Floor #2</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#profile">Floor #3</a>
+                <a class="nav-link" data-toggle="tab" href="#Floor3">Floor #3</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#profile">Floor #4</a>
+                <a class="nav-link" data-toggle="tab" href="#Floor4">Floor #4</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#profile">Floor #5</a>
+                <a class="nav-link" data-toggle="tab" href="#Floor5">Floor #5</a>
             </li>
         </ul>
         <div id="myTabContent" class="tab-content">
