--- a/UPSParks/Content/bootstrap-lux.css
+++ b/UPSParks/Content/bootstrap-lux.css
@@ -4089,10 +4089,13 @@ input[type="button"].btn-block {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
+  background-color: black;
+  color: white;
 }
 
 .nav-link:hover, .nav-link:focus {
   text-decoration: none;
+  color: white;
 }
 
 .nav-link.disabled {
