--- a/UPSParks/Content/Site.css
+++ b/UPSParks/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top: 50px;
+    /*padding-top: 50px;*/
     padding-bottom: 20px;
 }
 
@@ -21,4 +21,12 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+#Title {
+    background-color: black;
+    color: yellow;
+    font-size: 25pt;
+    text-align: center;
+    padding: 30px;
 }
