--- a/UPSParks/Views/Home/Index.cshtml
+++ b/UPSParks/Views/Home/Index.cshtml
@@ -10,30 +10,32 @@
 
 </script>
 
-<p>UPS PARKS</p>
-
 <ul id="rowTab" class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#tab_a">Floor 1</a></li>
-    <li><a data-toggle="tab" href="#tab_b">Floor 2</a></li>
-    <li><a data-toggle="tab" href="#tab_c">Floor 3</a></li>
-    <li><a data-toggle="tab" href="#tab_d">Floor 4</a></li>
-    <li><a data-toggle="tab" href="#tab_e">Floor 5</a></li>
+    <li class="active"><a data-toggle="tab" href="#tab_a">Home</a></li>
+    <li><a data-toggle="tab" href="#tab_b">Floor 1</a></li>
+    <li><a data-toggle="tab" href="#tab_c">Floor 2</a></li>
+    <li><a data-toggle="tab" href="#tab_d">Floor 3</a></li>
+    <li><a data-toggle="tab" href="#tab_e">Floor 4</a></li>
+    <li><a data-toggle="tab" href="#tab_f">Floor 5</a></li>
 </ul>
 
 <div class="tab-content">
     <div id="tab_a" class="tab-pane fade active in">
-        Tab A inner
+        Home
     </div>
     <div id="tab_b" class="tab-pane fade">
-        Tab B inner
+        Floor #1
     </div>
     <div id="tab_c" class="tab-pane fade">
-        Tab C inner
+        Floor #2
     </div>
     <div id="tab_d" class="tab-pane fade">
-        Tab D inner
+        Floor #3
     </div>
     <div id="tab_e" class="tab-pane fade">
-        Tab E inner
+        Floor #4
+    </div>
+    <div id="tab_f" class="tab-pane fade">
+        Floor #4
     </div>
 </div>
