--- a/UPSParks/Views/Shared/_Layout.cshtml
+++ b/UPSParks/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
 </head>
 <body>
     @Html.Partial("_NavBar")
+
+    <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
