--- a/UPSParks/Views/Home/Index.cshtml
+++ b/UPSParks/Views/Home/Index.cshtml
@@ -22,6 +22,14 @@
 <div class="tab-content">
     <div id="tab_a" class="tab-pane fade active in">
         Home
+        <div id="f1">
+            <h1>Floor #1</h1>
+            <h1>Floor #2</h1>
+            <h1>Floor #3</h1>
+            <h1>Floor #4</h1>
+            <h1>Floor #5</h1>
+            <h1>Handicap Spots</h1>
+        </div>
     </div>
     <div id="tab_b" class="tab-pane fade">
         Floor #1
@@ -36,6 +44,6 @@
         Floor #4
     </div>
     <div id="tab_f" class="tab-pane fade">
-        Floor #4
+        Floor #5
     </div>
 </div>
