--- a/UPSParks/Views/Shared/_NavBar.cshtml
+++ b/UPSParks/Views/Shared/_NavBar.cshtml
@@ -26,4 +26,4 @@
     </div>
 </nav>*@
 
-<h1 id="Title">U Park Smart</h1>
+<h1 id="Title"><img id="logo" src="~/Content/UPS-Logo.png"> U Park Smart</h1>
