--- a/UPSParks/Content/Site.css
+++ b/UPSParks/Content/Site.css
@@ -1,7 +1,10 @@
 ﻿body {
     /*padding-top: 50px;*/
     padding-bottom: 20px;
-    background-color: white;
+}
+
+#b1 {
+    background-color: black;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -24,6 +27,14 @@ textarea {
     max-width: 280px;
 }
 
+a {
+    color: black;
+}
+
+#button1 {
+    background-color: gold;
+}
+
 #Title {
     background-color: black;
     color: white;
@@ -38,4 +49,14 @@ textarea {
     padding: 15px;
     text-align: center;
     border-radius: 25px;
+}
+
+#logo {
+    position: relative;
+    width: 60px;
+    height: auto;
+}
+
+.active {
+    
 }
