--- a/UPSParks/Views/Home/Index.cshtml
+++ b/UPSParks/Views/Home/Index.cshtml
@@ -1,49 +1,17 @@
 ﻿@{
     ViewBag.Title = "Home Page";
+    Layout = "~/Views/Shared/homepage.cshtml";
 }
 
-<script>
+<div id="tab_a" class="tab-pane fade active in">
+    <div id="f1">
+        <h1>Floor #1</h1>
+        <h1>Floor #2</h1>
+        <h1>Floor #3</h1>
+        <h1>Floor #4</h1>
+        <h1>Floor #5</h1>
+        <h1>Handicap Spots</h1>
+    </div>
 
-    $(document).ready(function () {
-        $('#rowTab a:first').tab('show');
-    });
-
-</script>
-
-<ul id="rowTab" class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#tab_a">Home</a></li>
-    <li><a data-toggle="tab" href="#tab_b">Floor 1</a></li>
-    <li><a data-toggle="tab" href="#tab_c">Floor 2</a></li>
-    <li><a data-toggle="tab" href="#tab_d">Floor 3</a></li>
-    <li><a data-toggle="tab" href="#tab_e">Floor 4</a></li>
-    <li><a data-toggle="tab" href="#tab_f">Floor 5</a></li>
-</ul>
-
-<div class="tab-content">
-    <div id="tab_a" class="tab-pane fade active in">
-        Home
-        <div id="f1">
-            <h1>Floor #1</h1>
-            <h1>Floor #2</h1>
-            <h1>Floor #3</h1>
-            <h1>Floor #4</h1>
-            <h1>Floor #5</h1>
-            <h1>Handicap Spots</h1>
-        </div>
-    </div>
-    <div id="tab_b" class="tab-pane fade">
-        Floor #1
-    </div>
-    <div id="tab_c" class="tab-pane fade">
-        Floor #2
-    </div>
-    <div id="tab_d" class="tab-pane fade">
-        Floor #3
-    </div>
-    <div id="tab_e" class="tab-pane fade">
-        Floor #4
-    </div>
-    <div id="tab_f" class="tab-pane fade">
-        Floor #5
-    </div>
+    @Html.ActionLink("Floor Page", "Floors", "Home", new { @id = "button1", @class = "btn btn-warningHome" })<br />
 </div>
