--- a/UPSParks/Views/Home/Index.cshtml
+++ b/UPSParks/Views/Home/Index.cshtml
@@ -5,11 +5,11 @@
 
 <div id="tab_a" class="tab-pane fade active in">
     <div id="f1">
-        <h1>Floor #1</h1>
-        <h1>Floor #2</h1>
-        <h1>Floor #3</h1>
-        <h1>Floor #4</h1>
-        <h1>Floor #5</h1>
+        <h1>Floor 1: @ViewBag.Floor1</h1>
+        <h1>Floor 2: @ViewBag.Floor2</h1>
+        <h1>Floor 3: @ViewBag.Floor3</h1>
+        <h1>Floor 4: @ViewBag.Floor4</h1>
+        <h1>Floor 5: @ViewBag.Floor5</h1>
         <h1>Handicap Spots</h1>
     </div>
 
