--- a/UPSParks/Content/Site.css
+++ b/UPSParks/Content/Site.css
@@ -33,6 +33,12 @@ a {
 
 #button1 {
     background-color: gold;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    display: block;
+    width: 150px;
 }
 
 #Title {
@@ -49,6 +55,7 @@ a {
     padding: 15px;
     text-align: center;
     border-radius: 25px;
+    display: inline;
 }
 
 #logo {
@@ -59,4 +66,20 @@ a {
 
 .active {
     
+}
+
+#num {
+    background-color: lightgrey;
+    color: red;
+    display: block;
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#left {
+    float: left;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
