--- a/UPSParks/Content/Site.css
+++ b/UPSParks/Content/Site.css
@@ -83,3 +83,12 @@ a {
     margin-left: auto;
     margin-right: auto;
 }
+
+#map {
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    text-align: center;
+    display: block;
+    width: 100%;
+}
