--- a/UPSParks/Views/Home/Index.cshtml
+++ b/UPSParks/Views/Home/Index.cshtml
@@ -2,15 +2,15 @@
     ViewBag.Title = "Home Page";
     Layout = "~/Views/Shared/homepage.cshtml";
 }
-
+<link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
 <div id="tab_a" class="tab-pane fade active in">
     <div id="f1">
-        <h1>Floor 1: <span style="background:linear-gradient(red,blue); color: red;">&nbsp; @ViewBag.Floor1 &nbsp;</span></h1>
-        <h1>Floor 2: <span style="background-color:grey; color: red;">@ViewBag.Floor2</span></h1>
-        <h1>Floor 3: <span style="background-color:grey; color: red;">@ViewBag.Floor3</span></h1>
-        <h1>Floor 4: <span style="background-color:grey; color: red;">@ViewBag.Floor4</span></h1>
-        <h1>Floor 5: <span style="background-color:grey; color: red;">@ViewBag.Floor5</span></h1>
-        <h1 id="left">Handicap Spots</h1>
+        <h1>Floor 1: <span class="num">&nbsp; @ViewBag.Floor1 &nbsp;</span></h1>
+        <h1>Floor 2: <span class="num">&nbsp; @ViewBag.Floor2 &nbsp;</span></h1>
+        <h1>Floor 3: <span class="num">&nbsp; @ViewBag.Floor3 &nbsp;</span></h1>
+        <h1>Floor 4: <span class="num">&nbsp; @ViewBag.Floor4 &nbsp;</span></h1>
+        <h1>Floor 5: <span class="num">&nbsp; @ViewBag.Floor5 &nbsp;</span></h1>
+        <h1>Handicap Spots</h1>
     </div>
 
     @Html.ActionLink("Floor Page", "Floors", "Home", new { @id = "button1", @class = "btn btn-warningHome" })<br />
