--- a/UPSParks/Content/Site.css
+++ b/UPSParks/Content/Site.css
@@ -97,3 +97,70 @@ span.num {
     display: block;
     width: 100%;
 }
+
+.contain {
+    position: relative;
+    text-align: center;
+    color: black;
+    border: 2px solid black;
+}
+
+.quad1 {
+    position: absolute;
+    left: 48%;
+    top: 100px;
+    background-color: green;
+    text-align: center;
+    width: 50px;
+    font-size: 25pt;
+}
+
+.quad2 {
+    position: absolute;
+    left: 190px;
+    top: 650px;
+    background-color: green;
+    text-align: center;
+    width: 50px;
+    font-size: 25pt;
+}
+
+.quad3 {
+    position: absolute;
+    left: 415px;
+    top: 650px;
+    background-color: green;
+    text-align: center;
+    width: 50px;
+    font-size: 25pt;
+}
+
+.quad4 {
+    position: absolute;
+    right: 415px;
+    top: 650px;
+    background-color: green;
+    text-align: center;
+    width: 50px;
+    font-size: 25pt;
+}
+
+.quad5 {
+    position: absolute;
+    right: 190px;
+    top: 650px;
+    background-color: green;
+    text-align: center;
+    width: 50px;
+    font-size: 25pt;
+}
+
+.quad6 {
+    position: absolute;
+    right: 48%;
+    top: 1000px;
+    background-color: green;
+    text-align: center;
+    width: 50px;
+    font-size: 25pt;
+}
