--- a/UPSParks/Views/Home/Floors.cshtml
+++ b/UPSParks/Views/Home/Floors.cshtml
@@ -3,7 +3,7 @@
 }
 
 <h2>Floors</h2>
-
+<link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
 <script>
 
     $(document).ready(function () {
