--- a/UPSParks/Views/Shared/_NavBar.cshtml
+++ b/UPSParks/Views/Shared/_NavBar.cshtml
@@ -1,2 +1,2 @@
 ﻿
-<h1 id="Title"><img id="logo" src="~/Content/UPS-Logo.png"> U Park Smart</h1>
+<h1 id="Title"><img id="logo" src="~/Content/UPS-Logo.png"> UP<span style="color:gold;">ark</span>S<span style="color:gold;">mart</span></h1>
