--- a/UPSParks/Content/Site.css
+++ b/UPSParks/Content/Site.css
@@ -42,6 +42,7 @@ a {
     display: block;
     width: 150px;
     font-family: 'ABeeZee';
+    font-size: 12pt;
     color: #0f0e0f;
 }
 
@@ -54,7 +55,6 @@ a {
 }
 
 #f1 {
-    
     color: white;
     padding: 15px;
     text-align: center;
