--- a/UPSParks/Views/Shared/homepage.cshtml
+++ b/UPSParks/Views/Shared/homepage.cshtml
@@ -12,10 +12,10 @@
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
+        @*<hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+        </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
